work on backend; rework models a bit;

--- a/frontend/src/app/components/pages/invoice/invoice.component.html
+++ b/frontend/src/app/components/pages/invoice/invoice.component.html
@@ -38,11 +38,11 @@
       <div class="dates-container">
         <div>
           <span class="txt-light">Invoice Date</span>
-          <span class="txt-strong">{{billTo.date}}</span>
+          <span class="txt-strong">{{billTo.invoiceDate}}</span>
         </div>
         <div>
           <span class="txt-light">Payment Due</span>
-          <span class="txt-strong">{{billTo.terms}}</span>
+          <span class="txt-strong">{{billTo.dueDate}}</span>
         </div>
       </div>
 
