--- a/frontend/src/app/components/shared/invoice-form-component/invoice.form.component.html
+++ b/frontend/src/app/components/shared/invoice-form-component/invoice.form.component.html
@@ -90,13 +90,13 @@
           <input-field 
             label="Invoice Date"
             placeholder="20 Aug 2021"
-            controlName="date"
+            controlName="invoiceDate"
             >
           </input-field>
           <input-field 
             label="Payment Terms"
             placeholder="Net 30 Days"
-            controlName="terms"
+            controlName="dueDate"
             >
           </input-field>
         </div>
