complete early CRUD model; lots of small updates;

--- a/frontend/src/app/components/pages/invoices-list/components/invoices.header.component.html
+++ b/frontend/src/app/components/pages/invoices-list/components/invoices.header.component.html
@@ -2,7 +2,7 @@
   <div class="content-flex-container">
     <div class="container-flex-left">
       <h1>Invoices</h1>
-      <span>There are 7 total invoices</span>
+      <span>There are {{invoicesNum}} total invoices</span>
     </div>
     <div class="container-flex-right">
       <selection-popup-menu></selection-popup-menu>
