--- a/frontend/src/app/components/pages/invoice/invoice.component.html
+++ b/frontend/src/app/components/pages/invoice/invoice.component.html
@@ -1,4 +1,4 @@
-<invoice-form (onSuccess)="loadInvoice()"></invoice-form>
+<invoice-form (success)="onSuccess($event)"></invoice-form>
 
 <a [routerLink]="homeUrl" class="arrowAnchor back-link">
   <img src="assets/icon-arrow-left.svg" alt="">
