add custom dropdown component; add enums; lots of smaller updates;

--- a/frontend/src/app/components/pages/invoice/invoice.component.html
+++ b/frontend/src/app/components/pages/invoice/invoice.component.html
@@ -42,7 +42,7 @@
         </div>
         <div>
           <span class="txt-light">Payment Due</span>
-          <span class="txt-strong">{{billTo.dueDate}}</span>
+          <span class="txt-strong">{{paymentTerm}}</span>
         </div>
       </div>
 
