add register page; some refactoring;

--- a/frontend/src/app/components/pages/login/login.component.html
+++ b/frontend/src/app/components/pages/login/login.component.html
@@ -1,4 +1,9 @@
 
+<header class="login-header">
+  <h1>Login</h1>
+  <span>Welcome to NeoPay, please login</span>
+</header>
+
 <section class="content-container">
   <div class="form-container">
 
@@ -20,6 +25,12 @@
         >
         </input-field>
       </div>
+
+      <div class="controls-container">
+        <a routerLink="/register">register</a>
+        <button class="button button-primary">Login</button>
+      </div>
+
     </form>
 
   </div>
