progress on frontend session systems;

--- a/frontend/src/app/components/pages/login/login.component.html
+++ b/frontend/src/app/components/pages/login/login.component.html
@@ -28,7 +28,7 @@
 
       <div class="controls-container">
         <a routerLink="/register">register</a>
-        <button class="button button-primary">Login</button>
+        <button (click)="onLoginSubmit()" class="button button-primary">Login</button>
       </div>
 
     </form>
