plug frontend login and registration;

--- a/frontend/src/app/components/pages/login/register.component.html
+++ b/frontend/src/app/components/pages/login/register.component.html
@@ -48,7 +48,7 @@
 
       <div class="controls-container">
         <a routerLink="/login">Login</a>
-        <button class="button button-primary">Register</button>
+        <button (click)="onRegistrationSubmit()" class="button button-primary">Register</button>
       </div>
 
     </form>
