--- a/frontend/src/app/components/pages/login/login.component.html
+++ b/frontend/src/app/components/pages/login/login.component.html
@@ -32,6 +32,19 @@
       </div>
 
     </form>
+  </div>
 
+  <div class="oauth-container">
+      <header>
+        <span>Or sign in with:</span>
+      </header>
+      <div class="auth-options-container">
+        <ul>
+          <li class=google-oa2>
+            <img src="assets/google-sign-in.png" alt="google-auth.jpg">
+            <span>Google</span>
+          </li>
+        </ul>
+      </div>
   </div>
 </section>
