add google signin;

--- a/frontend/src/app/components/pages/login/login.component.scss
+++ b/frontend/src/app/components/pages/login/login.component.scss
@@ -46,6 +46,11 @@
   }
 }
 
+.google-oa2:hover{
+  cursor: pointer;
+  transform: translate(0,-1px);
+}
+
 .form-container{
   width: 100%;
   max-width: 300px;
