--- a/frontend/src/app/components/pages/login/login.component.html
+++ b/frontend/src/app/components/pages/login/login.component.html
@@ -40,7 +40,7 @@
       </header>
       <div class="auth-options-container">
         <ul>
-          <li class=google-oa2>
+          <li (click)="googleSignIn()" class=google-oa2>
             <img src="assets/google-sign-in.png" alt="google-auth.jpg">
             <span>Google</span>
           </li>
