some cleanup and refactoring of auth methods;

--- a/frontend/src/app/components/pages/login/register.component.html
+++ b/frontend/src/app/components/pages/login/register.component.html
@@ -54,4 +54,17 @@
     </form>
 
   </div>
+  <div class="oauth-container">
+    <header>
+      <span>Or sign in with:</span>
+    </header>
+    <div class="auth-options-container">
+      <ul>
+        <li (click)="googleSignIn()" class=google-oa2>
+          <img src="assets/google-sign-in.png" alt="google-auth.jpg">
+          <span>Google</span>
+        </li>
+      </ul>
+    </div>
+</div>
 </section>
