--- a/frontend/src/app/components/layout/navbar/navbar.component.html
+++ b/frontend/src/app/components/layout/navbar/navbar.component.html
@@ -6,7 +6,11 @@
   </div>
 
   <div class="nav-menu">
-
+    <ul>
+      <li>
+        <a routerLink="logout">logout</a>
+      </li>
+    </ul>
   </div>
 
 
