--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
+<modals-container></modals-container>
 <div class="top-container">
   <app-navbar></app-navbar>
   <app-page-frame></app-page-frame>
