--- a/frontend/src/app/components/layout/navbar/navbar.component.html
+++ b/frontend/src/app/components/layout/navbar/navbar.component.html
@@ -8,7 +8,7 @@
   <div class="nav-menu">
     <ul>
       <li>
-        <a routerLink="logout">logout</a>
+        <a (click)="onLogout" routerLink="logout">logout</a>
       </li>
     </ul>
   </div>
