update invoiceListView no-content handling while loading;

--- a/frontend/src/app/components/pages/invoices-list/invoices.list.component.html
+++ b/frontend/src/app/components/pages/invoices-list/invoices.list.component.html
@@ -7,7 +7,7 @@
 <div class="content-container">
   <div class="invoices-list-container">
 
-    <div *ngIf="invoices.length === 0" class="no-content-container">
+    <div *ngIf="invoices.length === 0 && !isLoading" class="no-content-container">
         <img src="assets\illustration-empty.svg" alt="no-invoices.img">
       <div class="no-content-msg-container">
         <h3>There is nothing here</h3>
