--- a/frontend/src/app/components/pages/invoice/invoice.component.html
+++ b/frontend/src/app/components/pages/invoice/invoice.component.html
@@ -9,7 +9,7 @@
   <header class="page-header">
     <div class="status-info-container">
       <span>Status</span>
-      <status-info-label></status-info-label>
+      <status-info-label [invoiceStatus]="invoiceStatus" ></status-info-label>
     </div>
 
     <div class="controls-container">
