--- a/frontend/src/app/components/shared/invoice-form-component/invoice.form.component.html
+++ b/frontend/src/app/components/shared/invoice-form-component/invoice.form.component.html
@@ -176,8 +176,8 @@
     <div class="controls-flex-container">
       <button (click)="closeForm()" class="button button-aux">Discard</button>
       <div>
-        <button type="button" class="button button-secondary">Save as Draft</button>
-        <button (click)="onSubmit()" type="button" class="button button-primary">Save & Send</button>
+        <button type="button" (click)="onSubmit(invoiceStatus.draft)" class="button button-secondary">Save as Draft</button>
+        <button (click)="onSubmit(invoiceStatus.pending)" type="button" class="button button-primary">Save & Send</button>
       </div>
     </div>
   </div>
