improve updating Invoice;

--- a/frontend/src/app/components/pages/invoice/invoice.component.html
+++ b/frontend/src/app/components/pages/invoice/invoice.component.html
@@ -15,7 +15,7 @@
     <div class="controls-container">
       <button (click)="handleOnEdit()" class="button button-aux">Edit</button>
       <button (click)="handleOnDelete()" class="button button-danger">Delete</button>
-      <button class="button button-primary">Mark as Paid</button>
+      <button (click)="setStatusPaid()" class="button button-primary">Mark as Paid</button>
     </div>
     
   </header>
