disable editing nonDraft invoices; disable markAsPaid button for paid invoices;

--- a/frontend/src/app/components/pages/invoice/invoice.component.html
+++ b/frontend/src/app/components/pages/invoice/invoice.component.html
@@ -13,9 +13,9 @@
     </div>
 
     <div class="controls-container">
-      <button (click)="handleOnEdit()" class="button button-aux">Edit</button>
+      <button *ngIf="isDraft" (click)="handleOnEdit()" class="button button-aux">Edit</button>
       <button (click)="handleOnDelete()" class="button button-danger">Delete</button>
-      <button (click)="setStatusPaid()" class="button button-primary">Mark as Paid</button>
+      <button *ngIf="isPending" (click)="setStatusPaid()" class="button button-primary">Mark as Paid</button>
     </div>
     
   </header>
