--- a/frontend/src/styles/_config.scss
+++ b/frontend/src/styles/_config.scss
@@ -27,4 +27,5 @@ $color-danger-faded: #9277FF;
 
 // Containers config
 
-$sidebar-nav-width: 103px;
+$sidebar-nav-desktop-width: 103px;
+$sidebar-nav-mobile-height: 80px;
