--- a/frontend/src/app/components/shared/invoice-form-component/invoice.form.component.scss
+++ b/frontend/src/app/components/shared/invoice-form-component/invoice.form.component.scss
@@ -65,7 +65,7 @@ $form-transition-duration: 0.35s;
 
   transition: transform $form-transition-duration ease-out;
 
-  padding-left: $sidebar-nav-width;
+  padding-left: $sidebar-nav-desktop-width;
 
   overflow-y: scroll;
 
@@ -146,7 +146,7 @@ $form-transition-duration: 0.35s;
   max-width: 719px;
 
   margin-top: -$controls-bar-height;
-  padding-left: $sidebar-nav-width;
+  padding-left: $sidebar-nav-desktop-width;
 
   z-index: 15;
 
