mobile layout implementation (in-progress);

--- a/frontend/src/styles/_config.scss
+++ b/frontend/src/styles/_config.scss
@@ -29,3 +29,7 @@ $color-danger-faded: #9277FF;
 
 $sidebar-nav-desktop-width: 103px;
 $sidebar-nav-mobile-height: 80px;
+
+// Breakpoints
+
+$breakpoint-tablet-width: 800px;
