--- a/frontend/src/app/components/layout/navbar/navbar.component.scss
+++ b/frontend/src/app/components/layout/navbar/navbar.component.scss
@@ -161,8 +161,13 @@ nav{
   }
 }
 
-@media(max-width: 800px){
+@media(max-width: $breakpoint-tablet-width){
   nav{
+    position: fixed;
+
+    top: 0;
+    left: 0;
+
     width: 100vw;
     height: $sidebar-nav-mobile-height;
 
