--- a/frontend/src/app/components/layout/page-frame/page-frame.component.scss
+++ b/frontend/src/app/components/layout/page-frame/page-frame.component.scss
@@ -23,3 +23,13 @@
   margin-right: 30px;
   margin-left: 30px;
 }
+
+@media(max-width: $breakpoint-tablet-width){
+  .content-container{
+    width: 100vw;
+    margin-top: 56px;
+
+    padding-left: 18px;
+    padding-right: 18px;
+  }
+}
