--- a/frontend/src/app/components/shared/invoice-form-component/invoice.form.component.scss
+++ b/frontend/src/app/components/shared/invoice-form-component/invoice.form.component.scss
@@ -235,3 +235,10 @@ $form-transition-duration: 0.35s;
 .add-item-container{
   margin-top: 35px;
 }
+
+@media(max-width: $breakpoint-tablet-width){
+  .form-container{
+    padding-top: 56px;
+    padding-left: 0;
+  }
+}
