--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -20,3 +20,11 @@ body{
   grid-template-columns: $sidebar-nav-desktop-width 1fr;
 }
 
+@media(max-width: $breakpoint-tablet-width){
+  .top-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
