--- a/frontend/src/app/components/pages/invoices-list/components/invoice-brief.component.scss
+++ b/frontend/src/app/components/pages/invoices-list/components/invoice-brief.component.scss
@@ -5,7 +5,7 @@
   height: 72px;
 
   display: grid;
-  grid-template-columns: 1fr 2fr 2fr;
+  grid-template-columns: 1fr 2fr;
   align-items: center;
 
   padding-left: 32px;
@@ -16,46 +16,50 @@
   border: solid 1px transparent;
 
   transition: border-color 0.2s ease;
-}
 
-.content-container:hover{
-  cursor: pointer;
-  border-color: $color-primary-main;
+  &:hover{
+    cursor: pointer;
+    border-color: $color-primary-main;
+  }
 }
 
 .container-left{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+
   font-size: 12px;
   font-weight: bold;
+}
+
+.container-right{
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+}
+
+.client-name-span-box{
+  width: 100px;
+}
+
+.client-price-container{
+  padding-left: 40px;
+  padding-right: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
 }
 
 .hash-prefix{
   color: $color-contrast-medium-lighter;
 }
 
-.container-middle{
-  max-width: 240px;
+.price-box{
+  text-align: center;
 
-  font-size: 12px;
-  font-weight: 500;
-
-  color: #858BB2;
-
-  display: flex;
-  justify-content: space-between;
-
-  margin-right: 50px;
-  margin-left: -20px;
-}
-
-.container-right{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.price-box span{
-  font-size: 16px;
-  font-weight: bold;
+  span{
+    font-size: 16px;
+    font-weight: bold;
+  }
 }
 
 .status-container{
@@ -65,3 +69,4 @@
   justify-content: space-between;
   align-items: center;
 }
+
