--- a/frontend/src/styles/_config.scss
+++ b/frontend/src/styles/_config.scss
@@ -33,3 +33,5 @@ $sidebar-nav-mobile-height: 80px;
 // Breakpoints
 
 $breakpoint-tablet-width: 800px;
+$breakpoint-tablet-width-medium: 720px;
+$breakpoint-tablet-width-small: 640px;
