--- a/frontend/src/app/components/layout/navbar/navbar.component.scss
+++ b/frontend/src/app/components/layout/navbar/navbar.component.scss
@@ -30,7 +30,7 @@ nav{
 
   		width: 100%;
   		height: 70%;
-  		background-color: $color-primary-main;
+  		background-color: var(--color-primary-main);
 
   		border-top-right-radius: 20px;
 
@@ -46,7 +46,7 @@ nav{
 
   		bottom: 0;
 
-  		background-color: $color-primary-accent;
+  		background-color: var(--color-primary-accent);
 
   		border-top-left-radius: 20px;
   		border-bottom-right-radius: 20px;
@@ -85,7 +85,7 @@ nav{
 		border-style: solid;
 		border-color: transparent;
 
-		border-top-color: $color-primary-main;
+		border-top-color: var(--color-primary-main);
 	};
 }
 
@@ -101,7 +101,7 @@ nav{
   justify-content: center;
   align-items: center;
 
-  background-color: $color-accent-3;
+  background-color: var(--color-accent-3);
 }
 
 .profile-img-container{
@@ -124,7 +124,7 @@ nav{
     height: 100%;
 
     border-top: solid 1px #494E6E;
-    background-color: $color-accent-3;
+    background-color: var(--color-accent-3);
 
     border-bottom-right-radius: 20px;
   }
@@ -145,7 +145,7 @@ nav{
   width: 100%;
   height: 100%;
 
-  background-color: $color-accent-3;
+  background-color: var(--color-accent-3);
 
   &::before{ /* top border-radius gap fix */
     content: '';
@@ -157,7 +157,7 @@ nav{
     width: $sidebar-nav-desktop-width;
     height: 20px;
 
-    background-color: $color-accent-3;
+    background-color: var(--color-accent-3);
   }
 }
 
@@ -173,7 +173,7 @@ nav{
 
     flex-direction: row;
 
-    background-color: $color-accent-3;
+    background-color: var(--color-accent-3);
     border-radius: 0;
   }
 
