--- a/frontend/src/app/components/pages/invoices-list/components/invoices.header.component.scss
+++ b/frontend/src/app/components/pages/invoices-list/components/invoices.header.component.scss
@@ -14,7 +14,7 @@ header{
 
   span{
     font-size: 12px;
-    color: $color-contrast-medium-darker;
+    color: var(--color-contrast-medium-darker);
 
     font-weight: 500;
   };
