--- a/frontend/src/app/components/pages/invoices-list/invoices.list.component.scss
+++ b/frontend/src/app/components/pages/invoices-list/invoices.list.component.scss
@@ -39,7 +39,7 @@
   max-width: 220px;
 
   font-size: 11.6px;
-  color: $color-contrast-medium-darker;
+  color: var(--color-contrast-medium-darker);
 
   text-align: center;
 }
