progress on invoice page responsive layout;

--- a/frontend/src/app/components/pages/invoice/invoice.component.html
+++ b/frontend/src/app/components/pages/invoice/invoice.component.html
@@ -20,7 +20,7 @@
     
   </header>
 
-  <article>
+  <article class="invoice-details-top-container">
     <header class="invoice-header">
       <div class="id-desc-container">
         <h4><span>#</span>{{invoiceId}}</h4>
