update invoice itemsTable sum text; small fix to responsive layout header padding;

--- a/frontend/src/app/components/pages/invoice/invoice.component.html
+++ b/frontend/src/app/components/pages/invoice/invoice.component.html
@@ -103,7 +103,7 @@
       </div>
     </section>
     <section class="sum-container">
-      <span>Amount Due</span>
+      <span>{{invoiceStatus === 1 ? 'Amount Due' : 'Grand Total'}}</span>
       <span>£ {{ totalSum }}</span>
     </section>
   </article>
